# Rouveen-waterpasanalyse

./: .gitignore  README.md  pyproject.toml
NOBV_waterpasanalyse_Rouveen/analysis/: plot_surface_height_change_deviation.py  plot_transect_compare_seasons_in_single_year.py
NOBV_waterpasanalyse_Rouveen/pre-processing/: select_waterpas_data.py
analysis/: plot_surface_height.py  plot_surface_height_change.py  plot_surface_height_change_deviation.py  plot_transect.py  plot_transect_compare_seasons_in_single_year.py  plot_transect_compare_years.py  plot_trendline.py  plot_trendline_and_groundwater.py  write_height_change_stats_to_csv.py  write_height_stats_to_csv.py  write_waterpas_to_shp.py
pre-processing/: load_gws_data.py  select_waterpas_data.py  write_gws_to_csv.py  write_waterpas_to_csv.py
rouveen_waterpasanalyse/analysis/: calc_stats.py  make_figs.py  plot_surface_height.py  plot_surface_height_change.py  plot_trendline_and_groundwater.py  plot_trendline_and_groundwater_ref_and_measure.py  write_height_change_stats_to_csv.py  write_height_stats_to_csv.py
rouveen_waterpasanalyse/pre-processing/: select_waterpas_data.py  write_gws_to_csv.py  write_waterpas_to_csv.py
