[project]
authors = [{name = "jreusen", email = "25225054+JesseReusen@users.noreply.github.com"}]
dependencies = []
description = "Add a short description here"
name = "Rouveen-waterpasanalyse"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
rouveen_waterpasanalyse = { path = ".", editable = true }

[tool.pixi.tasks]
