[project]
authors = [{name = "jreusen", email = "25225054+JesseReusen@users.noreply.github.com"}]
dependencies = ["xlsxwriter>=3.2.0,<4"]
description = "Add a short description here"
name = "Rouveen-waterpasanalyse"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
rouveen_waterpasanalyse = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.2.3,<3"
numpy = ">=2.1.3,<3"
scipy = ">=1.14.1,<2"
matplotlib = ">=3.9.2,<4"
pip = ">=25.1.1,<26"
openpyxl = ">=3.1.5,<4"
